# Learning-notes

./: .gitignore  .gitmodules  Person.py  Pyhton3 Base  Python3 Base.md  README.md  Ubuntu Q&A  base.md  go.mod  go.sum  hello.py
Cuda/first-demo/: cpu  cpu_add.cc  gpu  gpu_add.cu
Distributed/info/: 00-overview.md
GoInfo/Info/: Bases.md  Closure.md  Concurrency.md  Error_handler.md  File_ops.md  First_class_func.md  Func_meet.md  Map.md  OOP.md  Packaged.md  Panic&recover.md  Reflection.md  Select.md  Slice and Array.md  Strings.md  defer.md  (+6 more)
Prometheus/: prometheus-base.md
PyInfo/:  write|SVN​ .md  Assert-info.md  CGI-bugs.md  Decorator 2 .md  Deploy_django.md  Django-base.md  Format Specifier  Format-specifier.md  Function.md  Iterator-Generator.md  Python-Decorator.md  Python3 Base.md  Python3IO.md  Python3OS.md  Read_from_doc.md  Reusable package.md  Test in program.md  Threads.md  matplotlib-draw.md  part3.md  protocl buffers.md  python3 mysql.md   stringFunc.md
RustInfo/projects/actix-web-demo1/: Cargo.toml
RustInfo/projects/actix-web-demo1/src/: main.rs
Shell&CInfo/: Basic macro.md  Bitops&Binary.md  Gcc and Make ops.md  Malloc and new.md  \  bit  bit_test.c  const  const_test.cc  demo.sh  extern  extern of c.md  extern_test.c  macro  macro_test.c  makefile  malloc  malloc_new.cc  new  new_bracket.cc  set  set_test.cc  utils.c  utils.h  vector.c  vector.h
WebInfo/: JS  Execption.md  JS bases.md  JS operators.md  LaoZi & Confucius.md  Object and Array in JS.md
kubernetes/: k8s-concept.md  kubernetes-base.md
test/: edit.py  hello.py  sample_plots.py
(+216 files in other folders)
